--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
                                     <div class="header-social">    
                                         <ul>
                                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                            <li><a  href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
+                                            <li><a  href="https://www.facebook.com/IfceAracati/?locale=pt_BR"><i class="fab fa-facebook-f"></i></a></li>
                                             <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                            <li> <a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                            <li> <a href="https://portal.ifce.edu.br/campus/aracati/"><i class="fab fa-google-plus-g"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -310,7 +310,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial-top-cap">
-                                    <p>“I am at an age where I just want to be fit and healthy our bodies are our responsibility! So start caring for your body and it will care for you. Eat clean it will care for you and workout hard.”</p>
+                                    <p>Responsável pelo desenvolvimento da página "Contate-nos". Além de contribuir para outros aspectos do site.</p>
                                 </div>
                             </div>
                         </div>
@@ -439,7 +439,7 @@
                                     <h4>Informações de Contato</h4>
                                     <ul>
                                         <li>
-                                            <p>Endereço: Aracati-CE</p>
+                                            <p>Endereço: Conj. Hab. Dr. Abelardo Filho, Aracati - CE, 62800-000</p>
                                         </li>
                                         <li><a href="#">Número de Telefone: (88) 3303-1200</a></li>
                                         <li><a href="#">Email: recepcao.aracati@ifce.edu.br</a></li>
@@ -455,9 +455,9 @@
                                     <ul>
                                         <li><a href="blog.html"> Visualize o projeto</a></li>
                                         <li><a href="contact.html">Contate-nos</a></li>
-                                        <li><a href="">Desenvolvedores</a></li>
+                                        <li><a href="about.html">Desenvolvedores</a></li>
                                         <li><a href="#">Propriedades</a></li>
-                                        <li><a href="#">Suporte Técnico</a></li>
+                                        <li><a href="contact.html">Suporte Técnico</a></li>
                                     </ul>
                                 </div>
                             </div>
