--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                                     <div class="header-social">    
                                         <ul>
                                             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                            <li><a href="https://www.facebook.com/sai4ull"><i class="fab fa-facebook-f"></i></a></li>
+                                            <li><a href="https://www.facebook.com/IfceAracati/?locale=pt_BR"><i class="fab fa-facebook-f"></i></a></li>
                                             <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                                            <li><a href="https://portal.ifce.edu.br/campus/aracati/"><i class="fab fa-google-plus-g"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
