--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<!doctype html>
+'<!doctype html>
 <html class="no-js" lang="zxx">
 <head>
     <meta charset="utf-8">
@@ -455,9 +455,9 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Newsletter</h4>
+                                    <h4>Contribuição</h4>
                                     <div class="footer-pera footer-pera2">
-                                    <p>Heaven fruitful doesn't over lesser in days. Appear creeping.</p>
+                                    <p>Esta com dúvidas? Envie para que possamos esclarecer.</p>
                                 </div>
                                 <!-- Form -->
                                 <div class="footer-form" >
