adição de links

--- a/about.html
+++ b/about.html
@@ -163,7 +163,7 @@
                          <img src="assets/img/gallery/icon.jpg" alt="Ícone representando a água potável" style="width: 90px; height: 90px; border-radius: 90%;">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">Água potável</a></h5>
+                            <h5><a href="blog.html">Água potável</a></h5>
                             <p>A água potável está se tornando escassa no mundo devido ao consumo excessivo e à contaminação dos recursos hídricos.</p>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                             <img src="assets/img/gallery/icon2.jpg" alt="Ícone representando poluição hídrica" style="width: 90px; height: 90px; border-radius: 90%;">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">A poluição hídrica</a></h5>
+                            <h5><a href="blog.html">A poluição hídrica</a></h5>
                             <p>A poluição da água por esgoto, lixo e químicos ameaça a vida aquática e a saúde humana.</p>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                             <img src="assets/img/gallery/icon3.jpg" alt="Ícone representando poluição" style="width: 90px; height: 90px; border-radius: 90%;">
                         </div>
                         <div class="cat-cap">
-                            <h5><a href="services.html">A sede ainda existe</a></h5>
+                            <h5><a href="blog.html">A sede ainda existe</a></h5>
                             <p>Em regiões mais pobres do mundo, a falta de água potável compromete a saúde e a qualidade de vida da população.</p>
                         </div>
                     </div>
