--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
                         <p> A água é um recurso natural, vital e fundamental, composta por H2O, essencial para a vida, sendo incolor insípida e inodora.</p>
                         <p> O planeta possui vastos recursos hídricos, mas apenas uma pequena fração é água doce acessível, tornando a conservação e o uso consciente cruciais para a sustentabilidade e a saúde do planeta, que inclui o combate ao desperdício e a poluição.</p>
                     </div>
-                    <a href="about.html" class="btn" style="background-color:#1ed2ff;">Sobre nós</a>
+                    <a href="https://www.todamateria.com.br/agua/" class="btn" style="background-color:#1ed2ff;">Saiba mais</a>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <!-- about-img -->
