--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html"><img src="" alt=""></a>
+                                    <h1 style="color: #1ed2ff"> Água e Vida </h1>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
