--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="row align-items-center">
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html"><img src="" alt=""></a>
+                                    <h1 style="color: #1ed2ff"> Água e Vida </h1>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
